# shadow-web

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  lhm.plugin.json  pyproject.toml  requirements.txt  search_bypass_strategies.md
.github/workflows/: test.yml
benchmarks/: build_fixtures.py  run.py
benchmarks/fixtures/: ecommerce_like.html  github_like.html  shadow_dom_flattened.html  wikipedia_like.html
deploy/: oci.sh
examples/browser_use/: README.md  demo.py
examples/form_fill/: CASE.md  profile.json
examples/golden_path/: CASE.md  demo.py
examples/localpdf/: CASE.md  latest-scan.json
examples/security_scan/: latest-report.md  latest-scan.json  localpdf-full-report.md  localpdf-full-scan.json  localpdf-headers-only.json  localpdf-report.md  localpdf-scan.json
scripts/: cursor-setup.sh  form_fill_demo.py  localpdf_competitor_scan.py  security_surface_scan.py  smoke_install.sh
server/: __init__.py  main.py
skills/shadow-web/: SKILL.md
src/shadow_web/: __init__.py  a11y_capture.py  browser_use.py  capture_ready.py  compressor.py  content_index.py  diff.py  dom_capture.py  form_fill.py  grouping.py  heal_local.py  query.py  schema_snap.py  security_scan.py  server.py  utils.py  verified_heal.py  webmcp.py  wrapper.py
src/shadow_web/mcp/: server.py
tests/: __init__.py  conftest.py  test_a11y_capture.py  test_browser_use.py  test_capture_ready.py  test_compressor.py  test_content_index.py  test_diff.py  test_dom_capture.py  test_form_fill.py  test_grouping_heal_query.py  test_healed_action_once.py  test_integration.py  test_schema_snap.py  test_security_scan.py  test_server.py  test_shadow_grep.py  test_verified_heal.py  test_web_search.py  test_webmcp.py
